[tool.poetry]
name = "json parser"
version = "0.1.0"
description = ""
authors = ["Dnyaneshwar Giri <dnyaneshwargiri510@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
genson = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
